option('enable_client',
    type: 'boolean',
    value: true,
    description: 'Whether to build the client application',
)

option('enable_server',
    type: 'boolean',
    value: false,
    description: 'Whether to build the server application',
)

option('enable_test',
    type: 'boolean',
    value: false,
    description: 'Whether to build the tests',
)

option('alpine',
    type: 'boolean',
    value: false,
    description: 'Fixes for Alpine linux (docker build - missing pkg-config flags)',
)
