option('enable_client',
    type: 'boolean',
    value: true,
    description: 'Whether to build the client application',
)

option('enable_registry',
    type: 'boolean',
    value: false,
    description: 'Whether to build the registry application',
)

option('registry_storage',
    type: 'combo',
    choices: ['fs', 'db'],
    value: 'db',
    description: 'Storage model for binary blobs on the registry',
)

option('registry_serves_frontend',
    type: 'boolean',
    value: false,
    description: 'Whether the registry also serves the frontend',
)

option('enable_frontend_server',
    type: 'boolean',
    value: false,
    description: 'Whether to build the frontend static file server application',
)

option('enable_admin',
    type: 'boolean',
    value: false,
    description: 'Whether to build the dop-admin program',
)

option('enable_test',
    type: 'boolean',
    value: false,
    description: 'Whether to build the tests',
)

option('alpine',
    type: 'boolean',
    value: false,
    description: 'Fixes for Alpine linux (docker build - missing pkg-config flags)',
)
